@@ -1,6 +1,6 @@
 package codesquad.was.http.request;
 
-
+import codesquad.was.http.common.HttpHeaders;
 import codesquad.was.http.common.Mime;
 import codesquad.was.session.Manager;
 import codesquad.was.session.Session;
@@ -10,8 +10,8 @@ import org.slf4j.LoggerFactory;
 import java.io.*;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.util.Arrays;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 import java.util.function.Consumer;
 
 import static codesquad.was.session.Session.sessionStr;
@@ -21,11 +21,10 @@ public class HttpRequestParser {
 
     public static HttpRequest parseHttpRequest(InputStream inputStream) throws IOException {
         StringBuilder requestSb = new StringBuilder();
-        BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
         HttpRequest request = new HttpRequest();
 
         // Parse request line
-        String requestLine = reader.readLine();
+        String requestLine = readLine(inputStream);
         requestSb.append("\n").append(requestLine).append("\n");
         if (requestLine == null || requestLine.isEmpty()) {
             throw new IOException("Empty request line");
@@ -41,8 +40,8 @@ public class HttpRequestParser {
 
         // Parse headers
         String headerLine;
-
-        while (!(headerLine = reader.readLine()).isEmpty()) {
+        while (!(headerLine = readLine(inputStream)).isEmpty()) {
+            logger.info("Header: {}", headerLine);
             requestSb.append(headerLine).append("\n");
             String[] headerParts = headerLine.split(": ", 2);
             if (headerParts.length == 2) {
@@ -55,8 +54,9 @@ public class HttpRequestParser {
         URL url = new URL(protocol, host, path);
         request.setUrl(url);
         logger.info(requestSb.toString());
+
         // GET 이어도 body 를 갖을 수 있게 설정해 놓음
-        parseBody(request, reader);
+        parseBody(request, inputStream);
 
         return request;
     }
@@ -70,10 +70,7 @@ public class HttpRequestParser {
 
     private static void parseCookies(String cookieHeader, HttpRequest request) {
         String[] cookies = cookieHeader.split("; ");
-        Arrays.stream(cookies)
-                .map(cookie -> cookie.split("=", 2))
-                .filter(cookieParts -> cookieParts.length == 2)
-                .forEach(addCookieTo(request));
+        Arrays.stream(cookies).map(cookie -> cookie.split("=", 2)).filter(cookieParts -> cookieParts.length == 2).forEach(addCookieTo(request));
     }
 
     private static Consumer<String[]> addCookieTo(HttpRequest request) {
@@ -90,27 +87,49 @@ public class HttpRequestParser {
         };
     }
 
+    public static void parseBody(HttpRequest request, InputStream inputStream) throws IOException {
+        List<String> header = request.getHeaders().getHeader("Content-Length");
+        if (header == null) {
+            return;
+        }
 
-    private static void parseBody(HttpRequest request, BufferedReader reader) throws IOException {
-//         Parse body (if any)
+        int contentLength = Integer.parseInt(header.get(0));
+
         String contentType = null;
-        List<String> contentTypeList = request.getHeaders().getHeader("Content-Type");
+        HttpHeaders headers = request.getHeaders();
+        List<String> contentTypeList = headers.getHeader("Content-Type");
+
+        if (contentTypeList != null) {
+            contentType = contentTypeList.get(0);
+        }
+
+        // Handle multipart/form-data
+        if (contentType != null && contentType.startsWith("multipart/form-data")) {
+            String boundary = extractBoundary(contentType);
+            if (boundary != null) {
+                parseMultipartData(request, inputStream, boundary, contentLength);
+                return;
+            }
+        }
+
         if (contentTypeList != null) {
             contentType = contentTypeList.get(0);
             request.setContentType(Mime.fromString(contentType));
         }
-        StringBuilder body = new StringBuilder();
 
-        while (reader.ready()) {
-            body.append((char) reader.read());
+        ByteArrayOutputStream body = new ByteArrayOutputStream();
+        byte[] buffer = new byte[8192];
+        int read;
+        int totalRead = 0;
+
+        while (totalRead < contentLength && (read = inputStream.read(buffer, 0, Math.min(buffer.length, contentLength - totalRead))) != -1) {
+            body.write(buffer, 0, read);
+            totalRead += read;
         }
 
-        logger.info("리퀘스트 바디{}", body.toString());
-
-        String bodyStr = URLDecoder.decode(body.toString(), "UTF-8");
+        String bodyStr = URLDecoder.decode(body.toString(StandardCharsets.UTF_8), StandardCharsets.UTF_8);
 
         if ("application/x-www-form-urlencoded".equals(contentType)) {
-
             request.parseParameters(bodyStr);
             return;
         }
@@ -118,5 +137,157 @@ public class HttpRequestParser {
         if (contentType == null || contentType.isEmpty()) {
             request.setBody(bodyStr);
         }
+    }
+
+    private static String extractBoundary(String contentType) {
+        String[] parts = contentType.split(";");
+        for (String part : parts) {
+            if (part.trim().startsWith("boundary=")) {
+                return part.split("=")[1].trim();
+            }
+        }
+        return null;
+    }
+
+    private static void parseMultipartData(HttpRequest request, InputStream inputStream, String boundary, int contentLength) throws IOException {
+        byte[] boundaryBytes = ("--" + boundary).getBytes(StandardCharsets.UTF_8);
+        byte[] endBoundaryBytes = ("--" + boundary + "--").getBytes(StandardCharsets.UTF_8);
+        ByteArrayOutputStream partStream = new ByteArrayOutputStream();
+        ByteArrayOutputStream bufferStream = new ByteArrayOutputStream();
+        int read;
+        int totalRead = 0;
+
+        BufferedInputStream bufferedInputStream = new BufferedInputStream(inputStream);
+
+        boolean inPart = false;
+        int b;
+        while (totalRead < contentLength && (b = bufferedInputStream.read()) != -1) {
+            totalRead++;
+            bufferStream.write(b);
+
+            if (bufferStream.size() >= boundaryBytes.length) {
+                byte[] bufferArray = bufferStream.toByteArray();
+                if (!inPart && startsWith(bufferArray, boundaryBytes)) {
+                    inPart = true;
+                    bufferStream.reset();
+                } else if (inPart && endsWith(bufferArray, endBoundaryBytes)) {
+                    processPart(request, partStream.toByteArray(), boundaryBytes.length + 2);
+                    break;
+                } else if (inPart && endsWith(bufferArray, boundaryBytes)) {
+                    processPart(request, partStream.toByteArray(), boundaryBytes.length + 2);
+                    partStream.reset();
+                    bufferStream.reset();
+                } else {
+                    partStream.write(bufferArray[0]);
+                    bufferStream.reset();
+                    bufferStream.write(bufferArray, 1, bufferArray.length - 1);
+                }
+            }
+        }
+    }
+
+    private static boolean startsWith(byte[] source, byte[] prefix) {
+        if (source.length < prefix.length) {
+            return false;
+        }
+        for (int i = 0; i < prefix.length; i++) {
+            if (source[i] != prefix[i]) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private static boolean endsWith(byte[] source, byte[] suffix) {
+        if (source.length < suffix.length) {
+            return false;
+        }
+        for (int i = 0; i < suffix.length; i++) {
+            if (source[i] != suffix[i]) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private static void processPart(HttpRequest request, byte[] partData, int offset) throws IOException {
+        ByteArrayInputStream partInputStream = new ByteArrayInputStream(partData);
+        HttpHeaders partHeaders = new HttpHeaders();
+        ByteArrayOutputStream partBody = new ByteArrayOutputStream();
+        boolean headerEnded = false;
+        ByteArrayOutputStream bufferStream = new ByteArrayOutputStream();
+        int b;
+        partInputStream.read();
+        partInputStream.read();
+        while ((b = partInputStream.read()) != -1) {
+            String line = bufferStream.toString(StandardCharsets.UTF_8);
+            if (b == '\r') {
+                partInputStream.mark(1);
+                if (partInputStream.read() == '\n') {
+                    if (bufferStream.size() == 0) {
+                        headerEnded = true;
+                        continue;
+                    }
+
+                    if (!headerEnded) {
+                        String[] headerParts = line.split(":");
+                        if(headerParts.length == 2) {
+                            partHeaders.addHeader(headerParts[0].trim(), headerParts[1].trim());
+                        }
+                    } else {
+                        partBody.write(bufferStream.toByteArray());
+                        partBody.write("\r\n".getBytes(StandardCharsets.UTF_8));
+                    }
+
+                    bufferStream.reset();
+                } else {
+                    partInputStream.reset();
+                    bufferStream.write(b);
+                }
+            } else {
+                bufferStream.write(b);
+            }
+        }
+
+        // Handling the last part of the body
+        if (bufferStream.size() > 0) {
+            partBody.write(bufferStream.toByteArray());
+        }
+
+        String disposition = partHeaders.getHeader("Content-Disposition").get(0);
+        String[] dispositionParts = disposition.split(";");
+        String name = null;
+        String filename = null;
+        for (String part : dispositionParts) {
+            if (part.trim().startsWith("name=")) {
+                name = part.split("=")[1].trim().replace("\"", "");
+            } else if (part.trim().startsWith("filename=")) {
+                filename = part.split("=")[1].trim().replace("\"", "");
+            }
+        }
+
+        if (filename != null) {
+            // Process file upload part
+            request.addFile(name, filename, partBody.toByteArray());
+        } else {
+            // Process form field part
+            request.addParameter(name, partBody.toString(StandardCharsets.UTF_8).trim());
+        }
+    }
+
+    private static String readLine(InputStream inputStream) throws IOException {
+        ByteArrayOutputStream buffer = new ByteArrayOutputStream();
+        int nextByte;
+        while ((nextByte = inputStream.read()) != -1) {
+            if (nextByte == '\r') {
+                nextByte = inputStream.read(); // read '\n'
+                if (nextByte == '\n') {
+                    break;
+                }
+                buffer.write('\r');
+            }
+            buffer.write(nextByte);
+        }
+        return buffer.toString(StandardCharsets.UTF_8);
     }
 }
